# audioplayer

./: .gitmodules  CMakeLists.txt
src/: CMakeLists copy.txt  CMakeLists.txt  SoundFileReaderMp3.cpp  SoundFileReaderMp3.hpp  lib.cpp  lib.hpp  main.cpp  test.cpp
